# lambe-haath

./: .env.example  .gitignore  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
agents/common/: framing.py
agents/exporter/: __main__.py  convert.py
agents/ocr_agent/: __main__.py  extract.py  framing.py  server.py
agents/prompt_agent/: __main__.py  cache.py  clients.py  prompts.py  server.py
chargesheet-ui/: README.md  package.json  tsconfig.json  vite.config.ts
chargesheet-ui/mock-daemon/: package.json  server.ts  tsconfig.json
chargesheet-ui/src/: app.css
docs/plans/: 2026-05-28-foundation-schema-protocol-mock.md  2026-05-28-plan-b-supervisor-dispatcher-http.md  2026-05-28-plan-c-real-ocr-agent.md  2026-05-28-plan-d-real-prompt-agent.md  2026-05-28-plan-f-chargesheet-ui.md  2026-05-29-plan-e-stats.md
docs/specs/: 2026-05-28-chargesheet-pipeline-design.md
logos/: CLAUDE.md  build.zig  build.zig.zon
logos/src/: config.zig  ids.zig  lock.zig  main.zig  paths.zig  root.zig
mupdf-zig/: .gitignore  README.md  build.zig  build.zig.zon
mupdf-zig/src/: context.zig  (+3 more)
packaging/: README.md  agents.json.example
scripts/: check-version.sh  package.sh  smoke.ps1  smoke.sh
tests/: conformance_harness.py  conftest.py  mock_agent.py  test_cache_helper.py  test_conformance.py  test_mock_agent.py  test_ocr_agent_live.py  test_ocr_agent_protocol.py  test_ocr_page_offset.py  test_prompt_agent_clients.py  test_prompt_agent_live.py  test_prompt_agent_prompts.py  test_prompt_agent_protocol.py  test_prompt_run_caching.py
(+136 files in other folders)
